add f1 in utility

--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -12,10 +12,11 @@ import LastRaceResults from '../components/LastRaceResults.astro';
 import DriverStandings from '../components/DriverStandings.astro';
 import ConstructorStandings from '../components/ConstructorStandings.astro'
 import StatsComponent2 from '../components/TeamSectionF1.astro'
+import TeamSectionCostrF1 from "../components/TeamSectionCostrF1.astro";
 
 
 import StatsComponent from '../components/DriverInfo.astro'
-import { getDriverInfo, getDriverStats } from '../services/f1Service';
+import { getDriverInfo, getDriverStats, getConstructorInfo, getConstructorStats } from '../services/f1Service';
 
 // Array di ID dei piloti
 const driverIds = ['max_verstappen', 'hamilton', 'leclerc', 'norris', 'sainz', 'piastri'];
@@ -26,6 +27,19 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
     return {
         driverData: driverInfo,
         driverStats: driverStats
+    };
+}));
+
+
+// Array di ID dei costruttori
+const constructorIds = ['mercedes', 'red_bull', 'ferrari', 'mclaren', 'alpine'];
+
+const constructorsData = await Promise.all(constructorIds.map(async (constructorId) => {
+    const constructorInfo = await getConstructorInfo(constructorId); // Funzione per ottenere informazioni sul costruttore
+    const constructorStats = await getConstructorStats(constructorId); // Usa la versione per la stagione 2024
+    return {
+        constructorData: constructorInfo,
+        constructorStats: constructorStats
     };
 }));
 
@@ -111,6 +125,25 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
         </div>
         <!-- Fine componente -->
     </div>
+    <div class="collapse collapse-arrow bg-base-200">
+      <input type="radio" name="my-accordion-2" />
+      <div class="collapse-title text-xl font-medium">
+        <div style="display: flex; align-items: center;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg" alt="Logo F1" style="width: 100px; height: auto; margin-right: 10px;">
+          <h1 style="margin: 0;">Statistiche Piloti Formula 1 </h1>
+        </div>
+      </div>
+      <div class="collapse-content">
+          <!-- Inizio componente -->
+          <div class="row">
+            {constructorsData.map(({ constructorData, constructorStats }) => (
+                <div class="w-full mb-4">
+                    <TeamSectionCostrF1 constructorData={constructorData} constructorStats={constructorStats} />
+                </div>
+            ))}
+        </div>
+          <!-- Fine componente -->
+      </div>
 </div>
 
 
