--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -130,7 +130,7 @@ const constructorsData = await Promise.all(constructorIds.map(async (constructor
       <div class="collapse-title text-xl font-medium">
         <div style="display: flex; align-items: center;">
           <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg" alt="Logo F1" style="width: 100px; height: auto; margin-right: 10px;">
-          <h1 style="margin: 0;">Statistiche Piloti Formula 1 </h1>
+          <h1 style="margin: 0;">Statistiche Costruttori Formula 1 </h1>
         </div>
       </div>
       <div class="collapse-content">
