--- a/src/components/TeamSectionCostrF1.astro
+++ b/src/components/TeamSectionCostrF1.astro
@@ -25,8 +25,15 @@ const constructorLogos = {
             <img 
             src={constructorLogos[constructorData.constructorId]} 
             alt={`${constructorData.name} logo`} 
-            style={{ width: constructorData.constructorId === 'mercedes' || constructorData.constructorId === 'mclaren' || constructorData.constructorId === 'red_bull' ? '90px' : '70px', height: '90px' }} 
+            style={{ 
+                width: constructorData.constructorId === 'mercedes' || constructorData.constructorId === 'mclaren' || constructorData.constructorId === 'red_bull' ? '90px' : '70px', 
+                height: '90px', 
+                backgroundColor: 'white', 
+                padding: '5px',  
+                borderRadius: '4px' 
+            }} 
         />
+        
         </li>
         <li>
           <div class="flex items-center gap-x-6">
