--- a/src/components/TeamSectionCostrF1.astro
+++ b/src/components/TeamSectionCostrF1.astro
@@ -17,24 +17,22 @@ const constructorLogos = {
 <div class="py-10 sm:py-10">
     <div class="mx-auto grid max-w-7xl gap-x-8 gap-y-20 px-6 lg:px-8 xl:grid-cols-3">
       <div class="max-w-2xl">
-        <h2 class="text-3xl font-bold tracking-tight sm:text-4xl text-primary">{constructorData.givenName} {constructorData.familyName}</h2>
-        <p class="mt-6 text-lg leading-8 text-gray-600 text-white"></p>
+        <img 
+        src={constructorLogos[constructorData.constructorId]} 
+        alt={`${constructorData.name} logo`} 
+        style={{ 
+            width: constructorData.constructorId === 'mercedes' || constructorData.constructorId === 'mclaren' || constructorData.constructorId === 'red_bull' ? '90px' : '70px', 
+            height: '90px', 
+            backgroundColor: 'white', 
+            padding: '5px',  
+            borderRadius: '4px' 
+        }} 
+    />
+        <h3 class="text-2xl font-bold tracking-tight sm:text-4xl text-primary"></h3>
+      
       </div>
       <ul role="list" class="grid gap-x-8 gap-y-12 sm:grid-cols-2 sm:gap-y-16 xl:col-span-2">
-        <li>
-            <img 
-            src={constructorLogos[constructorData.constructorId]} 
-            alt={`${constructorData.name} logo`} 
-            style={{ 
-                width: constructorData.constructorId === 'mercedes' || constructorData.constructorId === 'mclaren' || constructorData.constructorId === 'red_bull' ? '90px' : '70px', 
-                height: '90px', 
-                backgroundColor: 'white', 
-                padding: '5px',  
-                borderRadius: '4px' 
-            }} 
-        />
-        
-        </li>
+       
         <li>
           <div class="flex items-center gap-x-6">
             
