--- a/src/components/NextMatch.astro
+++ b/src/components/NextMatch.astro
@@ -171,6 +171,7 @@ const nextEvent = findNextEvent(matches);
 {
   nextEvent ? (
     <div class="card bg-base-100 shadow-xl p-4 my-4">
+         <h2 class="card-title py-2">Prossima Partita</h2>
       <div class="flex flex-col w-full border-opacity-50">
         <div class="grid h-20 card bg-base-300 rounded-box place-items-center">
           <div class="flex items-center mr-4">
