--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -9,6 +9,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="blog" href="/cv/blog">Blog</a></li>
     <li><a class="py-3 text-base" id="utility" href="/cv/utility">Utility</a></li>
     <li><a class="py-3 text-base" id="f1" href="/cv/f1">F1</a></li>
+    <li><a class="py-3 text-base" id="motogp" href="/cv/motogp">Moto Gp</a></li>
     <li><a class="py-3 text-base" id="fcguardias" href="/cv/fcguardias">F.C. Guardia S.</a></li>
     <li>
         <a
