--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import ThemeSelector from "./ThemeSelector.astro";
       </label>
     </div>
     <div class="navbar-center">
-      <a class="btn btn-ghost normal-case text-xl" href="/cv/">Vincenzo Mancinelli</a>
+      <a class="btn btn-ghost normal-case text-xl" href="/">Vincenzo Mancinelli</a>
     </div>
     <div class="navbar-end">
       <ThemeSelector/>
